@@ -7,7 +7,7 @@
 ; The key_allocation option determines which API key and ID will be used by the
 ; Monitor.  The actual keys are found in the apikeys section.
 [monitor]
-apikeyid = 2
+apikeyid = 3
 ; 
 ; The logging option controls how the Monitor will log information to syslog.  
 ; More information will be logged if the verbose option is set  to yes 
