@@ -26,7 +26,8 @@
 CHANGELOG
 
 * Thu Apr 17 2014 Massimo Siani <massimo.siani@skysql.com>
-- Create section [monitor] in /etc/mariadbmanager/manager.ini if does not exist
+- Create section [monitor] in /etc/mariadbmanager/manager.ini if does not exist.
+- Update API key generation scripts.
 
 * Wed Apr 16 2014 Massimo Siani <massimo.siani@skysql.com>
 - Load all the current configuration options from /etc/mariadbmanager/manager.ini
